--- a/source/html/template/chart.html
+++ b/source/html/template/chart.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <script type="text/javascript" src="https://www.google.com/jsapi"></script>
-    <script type="text/javascript" src="js/2013-12-21.js"></script>
+    <script type="text/javascript" src="js/date.js"></script>
     <script type="text/javascript">
       google.load("visualization", "1", {packages:["corechart"]});
       google.setOnLoadCallback(drawChart);
